# pyUCalgarySRS

./: .coveragerc  .gitignore  COVERAGE.md  DEVELOPERS.md  Makefile  README.md  RELEASE_NOTES.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test_linux.yml  test_macos.yml  test_windows.yml  tests_all_platforms.yml  tests_default.yml
docs/: index.html  index.js  pyucalgarysrs.html  search.js
docs/pyucalgarysrs/: data.html  exceptions.html  index.html  models.html  pyucalgarysrs.html
docs/pyucalgarysrs/data/: _download.html  _list.html  _read.html  _schemas.html  classes.html  index.html  schemas.html
docs/pyucalgarysrs/data/_read/: _calibration.html  _rego.html  _skymap.html  _themis.html  _trex_blue.html  _trex_nir.html  _trex_rgb.html  _trex_spectrograph.html
docs/pyucalgarysrs/data/read/: index.html
docs/pyucalgarysrs/models/: _atm.html  index.html
docs/pyucalgarysrs/models/_atm/: _forward.html  _inverse.html  _schemas_forward.html  _schemas_inverse.html
docs/pyucalgarysrs/models/atm/: classes_forward.html  classes_inverse.html  index.html  schemas_forward.html  schemas_inverse.html
docs/templates/: head.mako
examples/notebooks/: read_rego.ipynb  read_smile.ipynb  read_trex_nir.ipynb  read_trex_rgb.ipynb
examples/scripts/: basic_import.py  get_dataset.py  get_urls.py
examples/scripts/models/atm/: atm_forward.py  atm_forward_custom_neutral_profile.py  atm_forward_custom_neutral_profile_dregion.py  atm_forward_custom_spectrum.py  atm_inverse.py  (+1 more)
examples/scripts/read/: read_calibration_flatfield_rego.py  read_calibration_flatfield_trex_blue.py  read_calibration_flatfield_trex_nir.py  read_calibration_flatfield_trex_nir_all.py  read_calibration_rayleighs_rego.py  read_calibration_rayleighs_rego_all.py  read_calibration_rayleighs_trex_blue.py  read_calibration_rayleighs_trex_blue_all.py  read_calibration_rayleighs_trex_nir.py  read_calibration_rayleighs_trex_nir_all.py  read_check_if_supported.py  read_list_supported_datasets.py  read_norstar_riometer_k2.py  read_rego.py  read_skymap_smile_all.py  read_skymap_themis_all.py  read_skymap_trex_nir_all.py  read_smile.py  read_swan_hsr_k0.py  read_themis_grid.py  read_trex_blue.py  read_trex_rgb_burst.py  read_trex_rgb_nominal.py  read_trex_spectrograph_processed.py  read_trex_spectrograph_raw.py
pyucalgarysrs/: __init__.py  exceptions.py  pyucalgarysrs.py
pyucalgarysrs/data/: __init__.py  _download.py  _list.py  _schemas.py  classes.py
pyucalgarysrs/data/_read/: __init__.py  _calibration.py  _rego.py  _skymaps.py  _themis.py  _trex_blue.py  _trex_nir.py  _trex_rgb.py  _trex_spectrograph.py
pyucalgarysrs/data/read/: __init__.py  _calibration.py  _grid.py  _norstar_riometer.py  _rego.py  _skymap.py  _smile.py  _swan_hsr.py  _themis.py  _trex_blue.py  _trex_nir.py  _trex_rgb.py  _trex_spectrograph.py
pyucalgarysrs/models/: __init__.py
pyucalgarysrs/models/_atm/: __init__.py  _forward.py  _inverse.py  _schemas.py  _schemas_inverse.py
pyucalgarysrs/models/atm/: __init__.py  _forward.py  _inverse.py  classes_forward.py  classes_inverse.py
tests/adhoc/: read_riometer_k0_data.py  riometer_testing.ipynb
tests/standalone_notebooks/: download.ipynb  download_notebook.ipynb  read_themis.ipynb  read_trex_blue.ipynb  read_trex_rgb.ipynb
tests/standalone_scripts/: basic_import.py  download.py  download_using_urls.py  get_dataset.py  get_datasets.py  list_datasets.py  list_datasets_filtered.py  list_observatories.py  list_observatories_filtered.py  list_sites.py  list_sites_filtered.py  read_calibration_flatfield_rego.py  read_calibration_flatfield_rego_all.py  read_calibration_flatfield_trex_nir.py  read_calibration_flatfield_trex_nir_all.py  read_check_if_supported.py  read_rego.py  read_skymap_rego.py  read_skymap_rego_all.py  read_skymap_themis.py  read_skymap_themis_all.py  read_skymap_trex_nir.py  read_skymap_trex_nir_all.py  read_skymap_trex_rgb.py  read_skymap_trex_rgb_all.py  read_themis.py  read_trex_blue_generalmethod.py  read_trex_nir.py  read_trex_rgb_burst_generalmethod.py  read_trex_rgb_nominal.py  read_trex_rgb_nominal_generalmethod.py  read_trex_rgb_unstable_stream0colour.py  read_trex_spectrograph.py  read_unsupported_dataset.py
tests/standalone_scripts/read/: read_calibration_flatfield_rego.py  read_calibration_flatfield_rego_all.py  read_calibration_flatfield_trex_blue.py  read_calibration_flatfield_trex_blue_all.py  read_calibration_flatfield_trex_nir.py  read_calibration_flatfield_trex_nir_all.py  read_calibration_rayleighs_rego.py  read_calibration_rayleighs_rego_all.py  read_calibration_rayleighs_trex_blue.py  read_calibration_rayleighs_trex_blue_all.py  read_calibration_rayleighs_trex_nir.py  read_calibration_rayleighs_trex_nir_all.py  read_norstar_riometer_k0.py  read_norstar_riometer_k2.py  read_rego_generalmethod.py  read_rego_grid.py  read_skymap_rego.py  read_skymap_rego_all.py  read_skymap_themis.py  read_skymap_themis_all.py  read_skymap_trex_blue.py  read_skymap_trex_blue_all.py  read_skymap_trex_nir.py  read_skymap_trex_nir_all.py  read_skymap_trex_rgb.py  read_skymap_trex_rgb_all.py  read_skymap_trex_spectrograph_all.py  read_swan_hsr_k0.py  read_themis.py  read_themis_generalmethod.py  read_themis_grid.py  read_trex_blue_grid.py  read_trex_nir.py  read_trex_nir_generalmethod.py  read_trex_nir_grid.py  read_trex_rgb5577_grid.py  read_trex_rgb_grid.py  read_trex_spectrograph_processed.py  read_trex_spectrograph_raw.py  read_unsupported_dataset.py
tests/test_data/: .gitignore
tests/test_suite/: conftest.py  test_pyucalgarysrs.py  test_version.py
tests/test_suite/data/: test_download.py  test_download_using_urls.py  test_get_datasets.py  test_get_observatories.py  test_get_sites.py  test_get_urls.py
tools/: bump_version.py  check_docstrings.py  check_for_license.py  update_coverage_file.py
tools/deprecated/: download_data_for_tests.py
tools/performance_testing/: read_rego.py  read_themis.py  read_trex_blue.py  read_trex_nir.py  read_trex_rgb_burst.py  read_trex_rgb_nominal.py  read_trex_spectrograph.py
(+45 files in other folders)
