[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyucalgarysrs"
version = "1.7.0"
description = "Tools for interacting with UCalgary Space Remote Sensing data"
readme = "README.md"
homepage = "https://github.com/ucalgary-srs/pyUCalgarySRS"
repository = "https://github.com/ucalgary-srs/pyUCalgarySRS"
authors = ["Darren Chaddock <dchaddoc@ucalgary.ca>"]
# license = 
packages = [
    { include = "pyucalgarysrs" },
]

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.28.0"
humanize = "^4.4.0"
texttable = "^1.6.4"
tqdm = "^4.61.2"
numpy = "^1.21.0"
opencv-python = "^4.4.0"
h5py = "^3.1.0"
scipy = "^1.6.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.8.4"
pytest = "8.3.4"
pycodestyle = "2.12.1"
yapf = "0.43.0"
pytest-xdist = "3.6.1"
pytest-sugar = "1.0.0"
pytest-cov = "6.0.0"
bandit = "1.8.0"
pyright = "1.1.391"
pdoc3 = "0.11.5"

[tool.ruff]
line-length = 150
lint.select = ["E", "F", "B", "N"]
lint.ignore = [
    "F403",  # `from .schemas import *` used; unable to detect undefined names
    "F405",  # `Union` may be undefined, or defined from star imports
    "B006",  # Do not use mutable data structures for argument defaults
]
exclude = ["pyucalgarysrs/__init__.py"]

[tool.yapf]
based_on_style = "pep8"
column_limit = 150
allow_split_before_dict_value = false

[tool.yapfignore]
ignore_patterns = [
    "temp/**/*.py",
]

[tool.pyright]
include = [
    "pyucalgarysrs/**/*.py",
]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
# addopts = -p no:warnings
testpaths = [
    "tests/test_suite/**/*.py",
]
markers = [
    "top_level: top level PyUCalgarySRS object tests",
    "data_datasets: data distribution dataset tests",
    "data_observatories: data distribution observatory tests",
    "data_geturls: data distribution get_urls tests",
    "data_download: data distribution download tests",
    "data_read: data distribution read tests",
    "atm: auroral transport model tests",
]

[tool.bandit]
exclude_dirs = ["src/test_suite"]
tests = []
skips = ["B110"]
