[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyucalgarysrs"
version = "1.22.1"
description = "Tools for interacting with UCalgary Space Remote Sensing data"
readme = "README.md"
homepage = "https://github.com/ucalgary-srs/pyUCalgarySRS"
repository = "https://github.com/ucalgary-srs/pyUCalgarySRS"
authors = [
    "Darren Chaddock <dchaddoc@ucalgary.ca>"
]
maintainers = [
    "Darren Chaddock <dchaddoc@ucalgary.ca>"
]
license = "Apache License 2.0" 
packages = [
    { include = "pyucalgarysrs" },
]

[tool.poetry.urls]
"API Reference" = "https://docs-pyucalgarysrs.phys.ucalgary.ca/"
"UCalgary SRS Open Data Platform" = "https://data.phys.ucalgary.ca"

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.28.0"
humanize = "^4.4.0"
texttable = "^1.6.4"
tqdm = "^4.61.2"
numpy = [
    {version = "^1.21.0", python = ">=3.9,<3.10"},
    {version = ">=1.21.0,<2.3.0", python = ">=3.10,<3.11"},
    {version = ">=1.21.0,<3.0.0", python = ">=3.11"}
]
opencv-python = "^4.4.0"
h5py = "^3.1.0"
scipy = [
    {version = "^1.6.0", python = ">=3.9,<3.10"},
    {version = "^1.8.0", python = ">=3.10"}
]

[tool.poetry.group.dev.dependencies]
ruff = "0.11.13"
pytest = "8.4.0"
pycodestyle = "2.13.0"
yapf = "0.43.0"
pytest-xdist = "3.7.0"
pytest-sugar = "1.0.0"
pytest-cov = "6.1.1"
bandit = "1.8.3"
pyright = "1.1.401"
pdoc3 = "0.11.6"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
iprogress = "^0.4"
ipywidgets = "^8.1.5"
nbmake = "^1.5.5"
matplotlib = [
    {version = "^3.4.0", python = ">=3.9,<3.10"},
    {version = "^3.5.0", python = ">=3.10"}
]

[tool.ruff]
line-length = 150
lint.select = ["E", "F", "B", "N"]
lint.ignore = [
    "F403",  # `from .schemas import *` used; unable to detect undefined names
    "F405",  # `Union` may be undefined, or defined from star imports
    "B006",  # Do not use mutable data structures for argument defaults
]
exclude = ["pyucalgarysrs/__init__.py"]

[tool.yapf]
based_on_style = "pep8"
column_limit = 150
allow_split_before_dict_value = false

[tool.yapfignore]
ignore_patterns = [
    "temp/**/*.py",
]

[tool.pyright]
include = [
    "pyucalgarysrs/*.py",
    "pyucalgarysrs/**/*.py",
    "examples/notebooks/*.ipynb",
    "examples/scripts/*.py",
    "tests/test_suite/*.py",
    "tests/test_suite/**/*.py",
]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = [
    "tests/test_suite",
]
python_files = "test_*.py"
markers = [
    "top_level: top level PyUCalgarySRS object tests",
    "data_datasets: data distribution dataset tests",
    "data_observatories: data distribution observatory tests",
    "data_geturls: data distribution get_urls tests",
    "data_download: data distribution download tests",
    "data_read: data distribution read tests",
    "atm: auroral transport model tests",
]

[tool.bandit]
exclude_dirs = ["src/test_suite"]
tests = []
skips = ["B110"]
